tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__ABetterWaytoFind-AAAAAAAAAAAAAAAAAAAH6g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2026,
  "prerequisites": [
    1008
  ],
  "properties": {
    "auto_claim": false,
    "desc": "NEI has a built in search feature for finding an item stored in an inventory nearby. A Stockroom Catalog can give you a list of everything stored in your inventories.\n\nSneak-right-click a block with an inventory (a chest, bookcase, barrel, anything with an inventory) to add that inventory to the list of inventories for the catalog to keep track of.\n\nSneak-right-click the same block again to remove that block from the list.\n\nA small particle effect will render on any block that has been selected with the catalog when holding the Stockroom Catalog to let you know that block is being tracked.\n\nRight-click to open the GUI and see the list. You can sort the list in ascending or descending order by quantity (Count) or alphabetical order.\n\nYou can also see a list of all the inventories that have a particular item and easily add the location of one of those inventories to a stockroom catalog so you can easily find your stuff.\n\nThe Stockroom Catalog can also be copied with the typesetting table and printing press.\n\nClick on the title to change it to anything so you can custom label your stockroom catalog.\n\nClick on the small chest icons on the right hand side of each listing to open the inventory list view.\n\nIf you want, you can craft a waypoint compass and use that to point you towards the chest. Since we have JourneyMaps and NEI, it's not really necessary.\n\n[warn]The Catalog seems to be a bit broken though and doesn't work well with GT items.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lA Better Way to Find Items",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1008
  ],
  "rewards": [],
  "tasks": []
}
