tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__AFoolFitforaKing-AAAAAAAAAAAAAAAAAAAIXA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2140,
  "prerequisites": [
    495
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Only the craziest fool would use diamonds to make a tool! Or is it crazy like a fox?\n\n§3PS: You can also §oburn them for fuel§r§3 for that extra bit of craziness.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lA Fool Fit for a King",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    495
  ],
  "rewards": [],
  "tasks": []
}
