tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__AVeryImportantAl-AAAAAAAAAAAAAAAAAAAAMA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 48,
  "prerequisites": [
    46
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The most important alloy (until you reach a higher tier) is undoubtedly red alloy. Fortunately, you have an alloy smelter, so grab some redstone and combine it with copper to get yourself a handful of that.\n\nDon't confuse your bronze with your copper or else you'll be scratching your head.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lA Very Important Alloy",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    46
  ],
  "rewards": [],
  "tasks": []
}
