tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__AcceleratedPlant-AAAAAAAAAAAAAAAAAAACwQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 705,
  "prerequisites": [
    65
  ],
  "properties": {
    "auto_claim": false,
    "desc": "As you might've discovered by now, plants grow very slowly. So why don't you try to speed that up a little? A watering can will come in handy.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lAccelerated Plant Growth",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    65
  ],
  "rewards": [],
  "tasks": []
}
