tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__AnotherUseforJav-AAAAAAAAAAAAAAAAAAAAPQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 61,
  "prerequisites": [
    84,
    59,
    76
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you have Steel, you can craft a sturdy enough Boiler to handle Lava. Steam is only outputted in the back, and you require Water input on the side and Lava input on the top. But as an added benefit, this Boiler will reward you with Obsidian!\n\n§3Did you know? Over 3 billion machines run on Lava!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lAnother Use for Java, I Mean Lava",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    84,
    59,
    76
  ],
  "rewards": [],
  "tasks": []
}
